fixes fi02 -> fiO2

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -136,7 +136,7 @@
 						<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 							<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_fi02_percent" value=0.0 onclick="show_easy_numpad(this,new input_controller('FI02',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_fiO2_percent" value=0.0 onclick="show_easy_numpad(this,new input_controller('FIO2',this))"></div> 
 					</div>
 
 
