playing with targets to webui

--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -117,11 +117,6 @@
 
         </tr>
         <tr>
-          <td><span class="form-group"><label class="small" for="inputVar3">Buffer loaded [ms]</label></td>
-          <td><input class="form-control py-1 input-editable" id="buff_loaded" type="number" value="1"   onclick="show_easy_numpad(this, buff_loaded_controller);lock();"  readOnly disabled/></td>
-
-        </tr>
-        <tr>
           <td><span class="form-group"><label class="small" for="inputVar4">Buffer pre-fill [ms]</label></td>
           <td><input class="form-control py-1 input-editable" id="buff_prefill" type="number" value="1"   onclick="show_easy_numpad(this, buff_prefill_controller);lock();"  readOnly disabled/></td>
         </tr>
@@ -150,11 +145,11 @@
             <td><input class="form-control py-1 input-editable" id="exhale" type="number" value="1"   onclick="show_easy_numpad(this, exhale_controller);lock();"  readOnly disabled/></td>
 
         </tr>
-        <tr><td><span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label></td>
-        <td><input class="form-control py-1 input-editable" id="exhale_fill" type="number" value="1"   onclick="show_easy_numpad(this, exhale_fill_controller);lock();"  readOnly disabled/></td>
 
-        <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
+        <tr>
+		<td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
           <td><input class="form-control py-1 input-editable" id="calibration" type="number" value="1"   onclick="show_easy_numpad(this, calibration_controller);lock();"  readOnly disabled/></td>
+        </tr>
 
 
       </table>
