--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -39,7 +39,7 @@
 					    <input type="button" class="lockable sb-nav-button" name="thirtysecs" value="30s" onclick="setChartXaxisRange_wrapper(this,-30,0)" disabled>
 					    <input type="button" class="lockable sb-nav-button" name="sixtysecs" value="60s" onclick="setChartXaxisRange_wrapper(this,-60,0)" disabled>
 					    <input type="button" class="lockable sb-nav-button" name="ninetysecs" value="90s" onclick="setChartXaxisRange_wrapper(this,-90,0)" disabled>
-					    <input type="button" class="lockable sb-nav-button" name="pause" value="Pause" onclick="togglePause()" disabled>
+					    <input type="button" class="lockable sb-nav-button" name="pause" value="Freeze" onclick="togglePause()" disabled>
 					</div>
 			    </div>
 	      	</div>
@@ -124,7 +124,7 @@
 						<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 							<a class="small text-dark col-center" href="#">PEEP</a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_PEEP" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
