--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -1341,7 +1341,7 @@ small,
 }
 .form-control, .form-button {
   padding: 0.2rem 0.2rem;
-  font-size: 0.5rem;
+  font-size: 1.0rem;
   font-weight: 400;
   line-height: 1.0;
   color: #495057;
@@ -1350,6 +1350,7 @@ small,
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-align:center;
 }
 .form-button{
     //height: calc(1.1em + 0.75rem + 2px);
@@ -1376,8 +1377,8 @@ small,
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 .form-control:disabled, .form-control[readonly] {
-  background-color: #e9ecef;
-  opacity: 1;
+  background-color: rgb(180,180,180);
+  opacity: 0.0;
 }
 
 .nav {
