--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -12,7 +12,7 @@
 
     <div class="tab">
       <button class="tablinks" onclick="openTab(this, 'Main')">Main</button>
-      <button class="tablinks" onclick="openTab(this, 'Advanced')">Advanced</button>
+      <button class="tablinks" onclick="openTab(this, 'Advanced')">Advanced Settings</button>
     </div>
 
     <div id="Main" class="tabcontent">
@@ -151,8 +151,99 @@
 					<div class="card-body px-1 py-1"><span class = "reading-main" id = "version">000.00</span></div>
 				</div>	
 			</div>
-    	</div>
-    </div>
+		</div>
+	</div>
+</div>
+	<div id="Advanced" class="tabcontent">
+		<form action="{{ url_for('data_handler') }}" method="post">
+		  <table class="ml-auto mr-auto">
+			<tr><td>
+			  <table>
+			<tr>
+			  <td> <label class="small" for="inputVar1" >Buffer fill [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="buff_fill" type="number" value="1"  onclick="show_easy_numpad(this, buff_fill_controller);lock();"  readOnly disabled/></td>
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar2">Buffer flush [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="buff_flush" type="number" value="1"   onclick="show_easy_numpad(this, buff_flush_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar4">Buffer pre-fill [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="buff_prefill" type="number" value="1"   onclick="show_easy_numpad(this, buff_prefill_controller);lock();"  readOnly disabled/></td>
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar5">Buffer pre-inhale [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="buff_preinhale" type="number" value="1"   onclick="show_easy_numpad(this, buff_preinhale_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar6">Buffer purge [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="buff_purge" type="number" value="1"   onclick="show_easy_numpad(this, buff_purge_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar7">Inhale [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="inhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar8">Pause [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="pause" type="number" value="1"   onclick="show_easy_numpad(this, pause_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+			<tr>
+			  <td><span class="form-group"><label class="small" for="inputVar9">Exhale [ms]</label></td>
+				<td><input class="form-control py-1 input-editable" id="exhale" type="number" value="1"   onclick="show_easy_numpad(this, exhale_controller);lock();"  readOnly disabled/></td>
+	
+			</tr>
+	
+			<tr>
+			<td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
+			  <td><input class="form-control py-1 input-editable" id="calibration" type="number" value="1"   onclick="show_easy_numpad(this, calibration_controller);lock();"  readOnly disabled/></td>
+			</tr>
+	
+	
+		  </table>
+		</td>
+		<td>
+		  <table>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar11">Valve (Air)</label></td>
+		  <td><input class="form-control py-1" id="valve_air" type="number" value="1"   onclick="show_easy_numpad(this, valve_air_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label></td>
+		  <td><input class="form-control py-1" id="valve_o2" type="number" value="1"   onclick="show_easy_numpad(this, valve_02_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label></td>
+		  <td><input class="form-control py-1" id="valve_inhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_inhale_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label></td>
+		  <td><input class="form-control py-1" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_exhale_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label></td>
+		  <td><input class="form-control py-1" id="valve_purge" type="number" value="1"   onclick="show_easy_numpad(this, valve_purge_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label></td>
+		  <td><input class="form-control py-1" id="peep" type="number" value="1"   onclick="show_easy_numpad(this, purge_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">State</label></td>
+		  <td><input class="form-control py-1" id="state" type="number" value="1"   onclick="show_easy_numpad(this, state_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">RPM</label></td>
+		  <td><input class="form-control py-1" id="rpm" type="number" value="1"   onclick="show_easy_numpad(this, rpm_controller);lock();"  readOnly disabled/></td>
+	
+		<tr><td><span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label></td>
+		  <td><input class="form-control py-1" id="inhale_exhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_exhale_controller);lock();"  readOnly disabled/></td>
+	
+		  </table></td>
+		</tr>
+		</table>
+		<input class="form-button float-bottom-right" type="submit" value="Update Settings">
+		</form>
+	</div>
+</div>
+
 </main>
 {% endblock %}
 
